updating tags and categories

--- a/_posts/2018-08-19-Asp.Net-Core-ModelState-Validation-Using-UnitTest.md
+++ b/_posts/2018-08-19-Asp.Net-Core-ModelState-Validation-Using-UnitTest.md
@@ -1,11 +1,8 @@
 ---
 title:  "ModelState Validation in Unit Test on Asp.Net Core" 
-categories: dev 
+categories: [dev]
 description: ModelState Validation in Unit Test on Asp.Net Core 
-tag: 
-  - csharp 
-  - asp.net-core 
-  - unit-test 
+tags: [csharp, asp.net-core, unit-test]
 --- 
 ​
 _Today_, I fumbled upon an interesting issue.   
