--- a/_posts/2017-05-26-Tuples.md
+++ b/_posts/2017-05-26-Tuples.md
@@ -7,7 +7,7 @@ description: Tuples in C# 7
 tags: [csharp]
 ---
 
-Ever had to create a class, just so that you could return more than one data from one particular function! Well, there is a solution. In C#. [Tuples](https://msdn.microsoft.com/en-us/library/system.tuple(v=vs.110).aspx), it is. Tuples has been around since .Net Framework 4.0. But it got much better in time, which brings us to the changes in C# 7.0.   Let's consider a function, which reads the First name and Last name of a user, and has to return them.
+Ever had to create a class, just so that you could return more than one data from one particular function! Well, there is a solution. In C#. [Tuples](https://docs.microsoft.com/en-us/dotnet/api/system.tuple), it is. Tuples has been around since .Net Framework 4.0. But it got much better in time, which brings us to the changes in C# 7.0.   Let's consider a function, which reads the First name and Last name of a user, and has to return them.
 
 *   One way of doing this would be to create a User class and return an object. But, what if you don't want to create a class.
 *   You can use _"out"_ or _"ref"_ parameters in the function. But there are scenarios where this is not an option.
@@ -55,4 +55,4 @@ Open Terminal in Visual Studio Code and run
 
 dotnet add package System.ValueTuple
 
-Note that, this could be run from powershell or cmd as well, if you are already in the project folder.   This is a work-around for this issue as of now, and I believe, that the .Net team will get this working without having to install this package, soon.   You can find an example for the same [here on GitHub](https://github.com/alenjalex/examples/tree/master/TuplesExample). References : [MSDN](https://msdn.microsoft.com/en-us/library/system.tuple(v=vs.110).aspx), [Microsoft Docs](https://docs.microsoft.com/en-us/dotnet/csharp/tuples), [CodeProject](https://www.codeproject.com/Tips/1186316/Tuples-in-Csharp?msg=5397087)
+Note that, this could be run from powershell or cmd as well, if you are already in the project folder.   This is a work-around for this issue as of now, and I believe, that the .Net team will get this working without having to install this package, soon.   You can find an example for the same [here on GitHub](https://github.com/ajalex114/examples/tree/master/TuplesExample). References :  [Microsoft Docs](https://docs.microsoft.com/en-us/dotnet/api/system.tuple), [CodeProject](https://www.codeproject.com/Tips/1186316/Tuples-in-Csharp?msg=5397087)
