--- a/_posts/2017-05-26-Tuples.md
+++ b/_posts/2017-05-26-Tuples.md
@@ -57,6 +57,6 @@ dotnet add package System.ValueTuple
 
 Note that, this could be run from powershell or cmd as well, if you are already in the project folder.   This is a work-around for this issue as of now, and I believe, that the .Net team will get this working without having to install this package, soon.   You can find an example for the same [here on GitHub](https://github.com/ajalex114/examples/tree/master/TuplesExample). References :  [Microsoft Docs](https://docs.microsoft.com/en-us/dotnet/api/system.tuple), [CodeProject](https://www.codeproject.com/Tips/1186316/Tuples-in-Csharp?msg=5397087)  
 
-<div align="left">
-    <a href="https://www.buymeacoffee.com/ajalex" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-blue.png" alt="Buy Me A Coffee" style="height: 60px !important;width: 217px !important;" ></a>
-</div>
+<a align="left" href="https://www.buymeacoffee.com/ajalex" target="_blank">
+<img src="{{ "/assets/img/Logos/buymeacoffee-blue.png"  | relative_url }}" alt="Buy me a coffee" align="left"/>
+</a>
