--- a/_posts/2018-08-19-Asp.Net-Core-ModelState-Validation-Using-UnitTest.md
+++ b/_posts/2018-08-19-Asp.Net-Core-ModelState-Validation-Using-UnitTest.md
@@ -252,3 +252,11 @@ public void ValidatorModelStatePropertyValidationTest()
 ```
 ​     
 Well. Happy _unit testing_... 
+
+--------------------------
+
+<a align="left" href="https://www.buymeacoffee.com/ajalex" target="_blank">
+<img src="{{ "/assets/img/Logos/buymeacoffee-blue.png"  | relative_url }}" alt="Buy me a coffee" align="left" style="height: 60px !important;width: 217px !important;"/>
+</a>  
+
+--------------------------
